@@ -1078,8 +1078,6 @@ static void handle_eval_depth_overflow(void)
 
 /* Return value of "e" evaluated in "rho". */
 
-static void MISSING_ARGUMENT_ERROR(SEXP symbol, SEXP rho);
-
 /* some places, e.g. deparse2buff, call this with a promise and rho = NULL */
 SEXP eval(SEXP e, SEXP rho)
 {
@@ -1183,7 +1181,7 @@ SEXP eval(SEXP e, SEXP rho)
 	    /* the error signaled here for a missing ..d matches the one
 	       signaled in getvar() for byte compiled code, but ...elt()
 	       signals a slightly different error (see PR18661) */
-	    MISSING_ARGUMENT_ERROR(e, rho);
+	    R_MissingArgError(e, getLexicalCall(rho), "evalError");
 	}
 	else if (TYPEOF(tmp) == PROMSXP) {
 	    ENSURE_PROMISE_IS_EVALUATED(tmp);
@@ -2489,8 +2487,7 @@ attribute_hidden SEXP do_forceAndCall(SEXP call, SEXP op, SEXP args, SEXP rho)
 /* called from methods_list_dispatch.c */
 SEXP R_execMethod(SEXP op, SEXP rho)
 {
-    SEXP call, arglist, callerenv, newrho, next, val;
-    RCNTXT *cptr;
+    SEXP newrho, next, val;
 
     /* create a new environment frame enclosed by the lexical
        environment of the method */
@@ -2504,13 +2501,11 @@ SEXP R_execMethod(SEXP op, SEXP rho)
        it can be done more efficiently. */
     for (next = FORMALS(op); next != R_NilValue; next = CDR(next)) {
 	SEXP symbol =  TAG(next);
-	R_varloc_t loc;
-	int missing;
-	loc = R_findVarLocInFrame(rho,symbol);
+	R_varloc_t loc = R_findVarLocInFrame(rho,symbol);
 	if(R_VARLOC_IS_NULL(loc))
 	    error(_("could not find symbol \"%s\" in environment of the generic function"),
 		  CHAR(PRINTNAME(symbol)));
-	missing = R_GetVarLocMISSING(loc);
+	int missing = R_GetVarLocMISSING(loc);
 	val = R_GetVarLocValue(loc);
 	SET_FRAME(newrho, CONS(val, FRAME(newrho)));
 	SET_TAG(FRAME(newrho), symbol);
@@ -2552,19 +2547,18 @@ SEXP R_execMethod(SEXP op, SEXP rho)
 
     /* Find the calling context.  Should be R_GlobalContext unless
        profiling has inserted a CTXT_BUILTIN frame. */
-    cptr = R_GlobalContext;
+    RCNTXT *cptr = R_GlobalContext;
     if (cptr->callflag & CTXT_BUILTIN)
 	cptr = cptr->nextcontext;
 
     /* The calling environment should either be the environment of the
        generic, rho, or the environment of the caller of the generic,
        the current sysparent. */
-    callerenv = cptr->sysparent; /* or rho? */
-
+    SEXP callerenv = cptr->sysparent, /* or rho? */
     /* get the rest of the stuff we need from the current context,
        execute the method, and return the result */
-    call = cptr->call;
-    arglist = cptr->promargs;
+	call    = cptr->call,
+	arglist = cptr->promargs;
     val = R_execClosure(call, newrho, callerenv, callerenv, arglist, op);
 #ifdef ADJUST_ENVIR_REFCNTS
     R_CleanupEnvir(newrho, val);
@@ -3072,7 +3066,7 @@ attribute_hidden SEXP do_tailcall(SEXP call, SEXP op, SEXP args, SEXP rho)
 	REPROTECT(args = evalListKeepMissing(args, rho), api);
 	expr = CAR(args);
         if (expr == R_MissingArg)
-	    MISSING_ARGUMENT_ERROR(install("expr"), rho);
+	    R_MissingArgError(install("expr"), getLexicalCall(rho), "tailcallError");
 	if (TYPEOF(expr) == EXPRSXP && XLENGTH(expr) == 1)
 	    expr = VECTOR_ELT(expr, 0);
 	if (TYPEOF(expr) != LANGSXP)
@@ -3085,7 +3079,7 @@ attribute_hidden SEXP do_tailcall(SEXP call, SEXP op, SEXP args, SEXP rho)
     else { // tailcall
 	/* could do argument matching here */
 	if (args == R_NilValue || CAR(args) == R_MissingArg)
-	    MISSING_ARGUMENT_ERROR(install("FUN"), rho);
+	    R_MissingArgError(install("FUN"), getLexicalCall(rho), "tailcallRecError");
 	expr = LCONS(CAR(args), CDR(args));
 	env = rho;
     }
@@ -5773,18 +5767,6 @@ static R_INLINE SEXP GET_BINDING_CELL_CACHE(SEXP symbol, SEXP rho,
     }
 }
 
-NORET static void MISSING_ARGUMENT_ERROR(SEXP symbol, SEXP rho)
-{
-    const char *n = CHAR(PRINTNAME(symbol));
-    if(*n) errorcall(getLexicalCall(rho),
-		     _("argument \"%s\" is missing, with no default"), n);
-    else errorcall(getLexicalCall(rho),
-		   _("argument is missing, with no default"));
-}
-
-#define MAYBE_MISSING_ARGUMENT_ERROR(symbol, keepmiss, rho) \
-    do { if (! keepmiss) MISSING_ARGUMENT_ERROR(symbol, rho); } while (0)
-
 NORET static void UNBOUND_VARIABLE_ERROR(SEXP symbol, SEXP rho)
 {
     errorcall_cpy(getLexicalCall(rho),
@@ -5838,7 +5820,7 @@ static R_INLINE SEXP getvar(SEXP symbol, SEXP rho,
     if (value == R_UnboundValue)
 	UNBOUND_VARIABLE_ERROR(symbol, rho);
     else if (value == R_MissingArg) {
-	MAYBE_MISSING_ARGUMENT_ERROR(symbol, keepmiss, rho);
+	if (!keepmiss) R_MissingArgError(symbol, getLexicalCall(rho), "getvarError");
 	return R_MissingArg;
     }
     else if (TYPEOF(value) == PROMSXP) {
